# git-setup-rs

./: .gitignore  Cargo.toml  Justfile  README.md
.claude/: CLAUDE.local.md  INDEX.md
.claude/.plan/: ASYNC_AWAIT_EXAMPLES.md  CROSS_PHASE_INTEGRATION_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_TIMELINE.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  INTEGRATION_TEST_PLAN.md  PERFORMANCE_PROFILING_GUIDE.md  PHASE_2_IMPROVEMENT_EXAMPLE.md  PHASE_5_DECOMPOSITION.md  PHASE_PLANS_CRITIQUE.md  README.md  RESOURCE_GUIDE.md  ROADMAP_9_PHASES.md  RUST_OWNERSHIP_EXAMPLES.md  SECURITY_IMPLEMENTATION_EXAMPLES.md
.claude/.reviews/: ALIGNMENT_PLAN.md  PROJECT_UNDERSTANDING_2024_01.md  RECOMMENDATIONS_2024_01.md  SENIOR_DEV_REVIEW.md
.claude/.spec/: SPEC.md  VALIDATION_NOTE.md  improvement-suggestions.md  requirements-traceability.json  spec-quality-report.json
.claude/.templates/: checkpoint-enforcement.md  junior-dev-guide.md
.claude/examples/: README.md
.claude/resources/: CONTEXT.md  rust-glossary.md
.github/pull_request_template/: checkpoint_review.md
examples/: auto_detection_demo.rs  tui_demo.rs
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/commands/: add.rs  apply.rs  delete.rs  edit.rs  handlers.rs  import.rs  list.rs  mod.rs
src/config/: loader.rs  types.rs
src/detection/: context.rs  detector.rs  mod.rs  rules.rs
src/matching/: algorithms.rs  matcher.rs  mod.rs
src/output/: csv.rs  json.rs  mod.rs  table.rs  yaml.rs
src/platform/: mod.rs  paths.rs
src/profile/: README.md  manager.rs  mock.rs  mod.rs
src/tui/: app.rs  (+5 more)
(+82 files in other folders)
