[package]
name = "git-setup-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
toml = "0.8"
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
tempfile = "3.0"
comfy-table = "7.1"
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
atty = "0.2"
hostname = "0.4"
regex = "1.10"
async-trait = "0.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
